Message explaining update

--- a/CSC209/Week1/Part1/index.html
+++ b/CSC209/Week1/Part1/index.html
@@ -3,9 +3,10 @@
 <body>
 
 <h1>Welcome to the page</h1>
-<p>Here is work for the first CSC209 class.</p>
+<p style="color: aqua;">Here is work for the first CSC209 class.</p>
 <a href="https://www.smith.edu/">Visit Smith College</a>
 <h2>Next Heading</h2>
+<img src="1.jpeg">
 
 <table>
   <tr>
