--- a/CSC209/Hwks/Hwk1/Tutorials/tutorial02.html
+++ b/CSC209/Hwks/Hwk1/Tutorials/tutorial02.html
@@ -10,10 +10,10 @@
   <p> "The a tag defines a hyperlink. The href attribute specifies the URL of the page the link goes to."</p>
   <a href=https://www.w3schools.com/html/html_attributes.asp> This webpage is referenced from W3Schools website.</a>
 <h2>2.1 The src Attribute</h2>  
-  <img src="1.jpeg">
+  <img src="../Images/1.jpeg">
   <p>The tag img defines an image, the src attribute specifies the image shown on page.</p>
 <h2>2.2 The width and height Attributes</h2>
-  <img src="1.jpeg" width="500" height="600">
+  <img src="../Images/1.jpeg" width="500" height="600">
   <p>Images can be resized just by using width and height attributes.</p>
 <h2>2.3 The alt Attribute</h2>
   <p>If an image would not shown, text after alt will be displayed.</p>
