--- a/CSC209/Hwks/Hwk1/Tutorials/tutorial07.html
+++ b/CSC209/Hwks/Hwk1/Tutorials/tutorial07.html
@@ -8,9 +8,9 @@
 <h1>07 Images</h1>
 
 
-<img src="1.jpeg" alt="Capybara">
-<img src="2.png" alt="Eating watermelon">
-<img src="3.gif" alt="playing phone">
+<img src="../Images/1.jpeg" alt="Capybara">
+<img src="../Images/2.png" alt="Eating watermelon">
+<img src="../Images/3.gif" alt="playing phone">
 
 
 <style>
