--- a/CSC209/Hwks/Hwk1/index.html
+++ b/CSC209/Hwks/Hwk1/index.html
@@ -3,98 +3,13 @@
 <html>
 <body>
 
-<!-- <button type="button" class="collapsible">Open Collapsible</button>
-<div class="content">
-  <p>Lorem ipsum...</p>
-</div> -->
 
 <h1>CSC209 Hwk01</h1>
-<a href="#P2">Jump to Part 2 and 3</a>
 <h2>Part 1: Tutorials</h2>
-<head>
-  <title>Chris Wu Hwk01</title>
-</head>
-<li><a href="tutorial01.html">Basic and Elements</a ></li>
-<li><a href="tutorial02.html">Attributes</a ></li>
-<li><a href="tutorial03.html">Headings and Paragraphs</a ></li>
-<li><a href="tutorial04.html">Formatting</a ></li>
-<li><a href="tutorial05.html">Quotations</a ></li>
-<li><a href="tutorial06.html">Using CSS and Links</a ></li>
-<li><a href="tutorial07.html">Images</a ></li>
-<li><a href="tutorial08.html">Tables and Lists</a ></li>
-
+<li><a href="Tutorials/index.html">Tutorials</a ></li>
 
 <h2 id="P2">Part 2 to 3: Introducing Capybara</h2>
-<h3 style="border: 1px solid black;background-color:yellowgreen;font:bold;font-size: xx-large;"><a href="https://en.wikipedia.org/wiki/Capybara">Capybara</a></h3>
+<li><a href="Technical/technical.html">Tutorials</a ></li>
 
-
-<table style="width:60%">
-  <tr>
-    <th style="width:27%">Common Name:</th>
-    <td>Capybara</td>
-  </tr>
-  <tr>
-    <th>Scientific Name:</th>
-    <td>Hydrochoerus hydrochaeris</td>
-  </tr>
-  <tr>
-    <th>Type:</th>
-    <td>Mammals</td>
-  </tr>
-  <tr>
-    <th>Diet:</th>
-    <td>Herbivore</td>
-  </tr>
-  <tr>
-    <th>Group Name:</th>
-    <td>Herd</td>
-  </tr>
-  <tr>
-    <th>Average Life Span In The Wild:</th>
-    <td>Up to 7 years</td>
-  </tr>
-  <tr>
-    <th>Size:</th>
-    <td>4.6 feet long: up to 2 feet high at shoulders</td>
-  </tr>
-  <tr>
-    <th>Weight:</th>
-    <td>77 – 143 pounds</td>
-  </tr>
-</table>
-<hr>
-<img src="4.jpg" alt="Capybara" style="width:500px;height:600px;">
-<hr>
-<strong style="font-size: larger">Here is a quote from National Geographic website:</strong>
-<blockquote cite="https://www.nationalgeographic.com/animals/mammals/facts/cabybara-facts" style="background-color: bisque;">You thought the beaver was a rodent of unusual size? The capybara is twice that big, the biggest rodent on Earth. These impressive semi-aquatic mammals are found throughout much of northern and central South America, though a small invasive population has been seen in Florida. They are closely related to guinea pigs and rock cavies, and more distantly related to chinchillas and agouti.<br> 
-
-  Like beavers, capybaras are strong swimmers. Their pig-shaped bodies are adapted for life in bodies of water found in forests, seasonally flooded savannas, and wetlands. Their toes are partially webbed for paddling around, and their reddish to dark brown fur is long and brittle perfect for drying out quickly on land. Small eyes, noses, and hairless ears are located high on their heads so that their faces remain exposed and alert when most of their body is submerged.</blockquote>
-
-<hr>
-<p style="font-size: larger;">Fun Fact: Capybaras are known for being chill to the outer environment!</p>
-<center>
-  <iframe width="500" height="700"
-    src="https://youtube.com/embed/eFIQFjc3BwQ?autoplay=1">
-  </iframe>
-</center>
-<hr>
-<strong style="font-size: larger;">SAD!!! Cute Capybara Might NOT be Legal in your State!</strong>
-<br>
-<img src="5.gif" alt="Capybara chewing">
-<blockquote cite="https://www.thesprucepets.com/capybara-pet-4101211#:~:text=However%2C%20they%20are%20legal%20to,Indiana%2C%20Florida%2C%20and%20Tennessee.">Depending on where you live, it may be illegal to own a capybara. Some vicinities may require a permit or health certificate. For some examples, capybaras are banned as pets in California and Georgia. However, they are legal to possess in Texas, Pennsylvania, and New York. Even if a state allows it, some cities may not. Capybaras are considered illegal pets in the five boroughs of New York City. It is legal to own a capybara is Texas, Washington, North Carolina, Arizona, Arkansas, Indiana, Florida, and Tennessee.
-</blockquote>
-
-<hr>
-<h2>Details About Capybara</h2>
-<h4>What They like to eat?</h4>
-<ol>
-    <li>Fruits</li>
-    <li>Vegetables</li>
-    <li>Berries</li>
-    <li>Grains</li>
-    <li>Grass</li>
-</ol>
-<p>Fun Fact: Capybaras do eat their poop! :P</p>
-<a href="capybara.html">Get to know more about Capybaras here!</a >
 </body>
 </html>
