--- a/CSC209/Hwks/Hwk1/Technical/capybara.html
+++ b/CSC209/Hwks/Hwk1/Technical/capybara.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-<a style="background-color: rgb(255, 235, 58);" href="index.html">Back</a >
+<a style="background-color: rgb(255, 235, 58);" href="technical.html">Back</a >
 
 
 <h1>Welcome! Ready to Meet Some Cute Capybaras?!!!</h1>
