--- a/CSC209/Hwks/Hwk1/Technical/technical.html
+++ b/CSC209/Hwks/Hwk1/Technical/technical.html
@@ -9,6 +9,7 @@
 </div> -->
 
 <h1>CSC209 Hwk01</h1>
+<a style="background-color: rgb(255, 235, 58);" href="../index.html">Back</a >
 <h2>Part 2: Technical & Creative</h2>
 
 <h3 style="border: 1px solid black;background-color:yellowgreen;font:bold;font-size: xx-large;"><a href="https://en.wikipedia.org/wiki/Capybara">Capybara</a></h3>
