--- a/CSC209/Hwks/Hwk1/index.html
+++ b/CSC209/Hwks/Hwk1/index.html
@@ -5,11 +5,12 @@
 
 
 <h1>CSC209 Hwk01</h1>
+<a style="background-color: rgb(255, 235, 58);" href="../../startPage.html">Back</a >
 <h2>Part 1: Tutorials</h2>
 <li><a href="Tutorials/index.html">Tutorials</a ></li>
 
 <h2 id="P2">Part 2 to 3: Introducing Capybara</h2>
-<li><a href="Technical/technical.html">Tutorials</a ></li>
+<li><a href="Technical/technical.html">Technical & Creative</a ></li>
 
 </body>
 </html>
