--- a/CSC209/Weeks/Week3/index.html
+++ b/CSC209/Weeks/Week3/index.html
@@ -7,6 +7,6 @@
   <title>Week03</title>
 </head>
 <li><a href="Tutorials/index.html">Tutorials</a ></li>
-
+<li><a href="Slide/index.html">Slide</a ></li>
 </body>
 </html>
