--- a/CSC209/Hwks/Hwk3/index.html
+++ b/CSC209/Hwks/Hwk3/index.html
@@ -7,7 +7,10 @@
   <title>Hwk03</title>
 </head>
 <li><a href="Tutorials/index.html">Tutorials</a ></li>
+  <p>This homework took 4.5 hours.</p>
 <li><a href="Technical/technical.html">Technical</a ></li>
+  <p>This homework took 2.5 hours.</p>
 <li><a href="Creative/technical.html">Creative</a ></li>
+  <p>This homework took 1 hour.</p>
 </body>
 </html>
