--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -8,6 +8,7 @@
 </head>
 <li><a href="Hwks/Hwk1/index.html">Hwk01</a ></li>
 <li><a href="Hwks/Hwk2/index.html">Hwk02</a ></li>
+<li><a href="Hwks/Hwk3/index.html">Hwk03</a ></li>
 <head>
     <title>Weeks</title>
 </head>
