--- a/CSC209/Weeks/Week4/Tutorials/index.html
+++ b/CSC209/Weeks/Week4/Tutorials/index.html
@@ -11,11 +11,11 @@
 <li><a href="domHTML.html">DOM HTML</a ></li>
 <li><a href="domForms.html">DOM Forms</a ></li>
 <li><a href="domCSS.html">DOM CSS</a ></li>
-<li><a href=".html">Assignment</a ></li>
-<li><a href=".html">Object</a ></li>
-<li><a href=".html">Construct Object</a ></li>
-<li><a href=".html">Events</a ></li>
-<li><a href=".html">Strings & Methods</a ></li>
+<li><a href="domEvents.html">DOM Events</a ></li>
+<li><a href="inputbutton.html">Input Buttons</a ></li>
+<li><a href=".html"></a ></li>
+<li><a href=".html"></a ></li>
+<li><a href=".html">S</a ></li>
 <li><a href="">Introduction</a ></li>
 <li><a href="">Introduction</a ></li>
 </body>
