--- a/CSC209/Hwks/Hwk4/index.html
+++ b/CSC209/Hwks/Hwk4/index.html
@@ -4,8 +4,11 @@
 
 <h1>CSC209</h1>
 <head>
-  <title>Week03</title>
+  <title>Homework 04</title>
 </head>
 <li><a href="Tutorials/index.html">Tutorials</a ></li>
+<li><a href="Technical/Level1/animation.html">Technical Level 1</a ></li>
+<li><a href="Technical/Level2/animation.html">Technical Level 2</a ></li>
+<li><a href="Creative/animation.html">Creative</a ></li>
 </body>
 </html>
