--- a/CSC209/Hwks/Hwk4/Technical/Level2/animation.html
+++ b/CSC209/Hwks/Hwk4/Technical/Level2/animation.html
@@ -26,7 +26,7 @@
         <option value="20">Medium</option>
         <option value="10">Fast</option>
     </select>
-    <button id="moveYellowBtn">Move blue square</button>
+    <button id="moveYellowBtn">Move yellow square</button>
 
     <label for="orangeSpeed">Orange square speed</label>
     <select id="orangeSpeed">
@@ -34,7 +34,7 @@
         <option value="20">Medium</option>
         <option value="10">Fast</option>
     </select>
-    <button id="moveOrangeBtn">Move blue square</button>
+    <button id="moveOrangeBtn">Move orange square</button>
 
     <br><br>  
     <button id="moveAllBtn">Move All Squares</button>
