--- a/CSC209/Hwks/Hwk4/index.html
+++ b/CSC209/Hwks/Hwk4/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>CSC209</h1>
 <head>
   <title>Homework 04</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #ecffca;
+      padding: 20px;
+    }
+    h1 {
+      color: #333;
+    }
+    .button-container {
+      list-style-type: none;
+      padding: 0;
+    }
+    .button-container li {
+      margin: 10px;
+    }
+    .button-container a {
+      display: inline-block;
+      text-decoration: none;
+      background-color: #acc8ff;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-size: 16px;
+      transition: background-color 0.3s;
+    }
+    .button-container a:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
-<li><a href="Tutorials/index.html">Tutorials</a ></li>
-<li><a href="Technical/Level1/animation.html">Technical Level 1</a ></li>
-<li><a href="Technical/Level2/animation.html">Technical Level 2</a ></li>
-<li><a href="Creative/animation.html">Creative</a ></li>
+<body>
+
+<h1>CSC209 Hwk04</h1>
+
+<ul class="button-container">
+  <li><a href="Tutorials/index.html">Tutorials</a></li>
+  <li><a href="Technical/Level1/animation.html">Technical Level 1</a></li>
+  <li><a href="Technical/Level2/animation.html">Technical Level 2</a></li>
+  <li><a href="Creative/animation.html">Creative</a></li>
+</ul>
+
 </body>
 </html>
