--- a/CSC209/Hwks/Hwk4/index.html
+++ b/CSC209/Hwks/Hwk4/index.html
@@ -40,9 +40,13 @@
 
 <ul class="button-container">
   <li><a href="Tutorials/index.html">Tutorials</a></li>
+  <p>This part takes 1.5 hours.</p>
   <li><a href="Technical/Level1/animation.html">Technical Level 1</a></li>
+  <p>This part takes 2 hours.</p>
   <li><a href="Technical/Level2/animation.html">Technical Level 2</a></li>
+  <p>This part takes 2 hours.</p>
   <li><a href="Creative/animation.html">Creative</a></li>
+  <p>This part takes 0.5 hour.</p>
 </ul>
 
 </body>
