--- a/CSC209/startPage.html
+++ b/CSC209/startPage.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Homework</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f4f4f4;
+      padding: 20px;
+    }
+    h1 {
+      color: #333;
+    }
+    .button-container {
+      list-style-type: none;
+      padding: 0;
+    }
+    .button-container li {
+      margin: 10px;
+    }
+    .button-container a {
+      display: inline-block;
+      text-decoration: none;
+      background-color: #007BFF;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-size: 16px;
+      transition: background-color 0.3s;
+    }
+    .button-container a:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
 <body>
 
 <h1>CSC209</h1>
-<head>
-  <title>Homework</title>
-</head>
-<li><a href="Hwks/Hwk1/index.html">Hwk01</a ></li>
-<li><a href="Hwks/Hwk2/index.html">Hwk02</a ></li>
-<li><a href="Hwks/Hwk3/index.html">Hwk03</a ></li>
-<head>
-    <title>Weeks</title>
-</head>
-<li><a href="Weeks/Week1/Part1/index.html">Week01</a ></li>
-<li><a href="Weeks/Week2">Week02</a ></li>
+
+<ul class="button-container">
+  <li><a href="Hwks/Hwk1/index.html">Hwk01</a></li>
+  <li><a href="Hwks/Hwk2/index.html">Hwk02</a></li>
+  <li><a href="Hwks/Hwk3/index.html">Hwk03</a></li>
+  <li><a href="Hwks/Hwk4/index.html">Hwk04</a></li>
+</ul>
+
+<h1>Weeks</h1>
+
+<ul class="button-container">
+  <li><a href="Weeks/Week1/Part1/index.html">Week01</a></li>
+  <li><a href="Weeks/Week2/">Week02</a></li>
+  <li><a href="Weeks/Week3/index.html">Week03</a></li>
+  <li><a href="Weeks/Week4/index.html">Week04</a></li>
+</ul>
+
 </body>
 </html>
