--- a/CSC209/FinalProject/login.html
+++ b/CSC209/FinalProject/login.html
@@ -62,8 +62,10 @@
        </div>
      </form>
    </div>
- 
+   <img id="animatedImage" src="images/recipe.png" alt="Recipe Icon" style="position:absolute; top:70px; left:0px; width:70px; z-index:10;">
+   <script src="js/animate.js"></script>
    <script src="js/script.js"></script>
+
  </body>
  </html>
  
