--- a/CSC209/FinalProject/main.html
+++ b/CSC209/FinalProject/main.html
@@ -42,6 +42,8 @@
     <button id="resetButton">Reset</button>
   </div>
   <div id="recipeList"></div>
+  <img id="animatedImage" src="images/recipe.png" alt="Recipe Icon" style="position:absolute; top:70px; left:0px; width:70px; z-index:10;">
   <script src="js/main.js"></script>
+  <script src="js/animate.js"></script>
 </body>
 </html>
