--- a/CSC209/FinalProject/profile.html
+++ b/CSC209/FinalProject/profile.html
@@ -77,7 +77,8 @@
   <script>
     window.userOnly = true;
   </script>
-
+  <img id="animatedImage" src="images/recipe.png" alt="Recipe Icon" style="position:absolute; top:70px; left:0px; width:70px; z-index:10;">
+  <script src="js/animate.js"></script>
   <script src="js/recipe.js"></script>
 </body>
 </html>
