--- a/CSC209/FinalProject/recipe.html
+++ b/CSC209/FinalProject/recipe.html
@@ -23,12 +23,16 @@
 
   <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search by keyword..." />
+    <input type="text" id="excludeInput" placeholder="Exclude keywords (comma-separated)" />
     <button onclick="searchRecipes()">Search</button>
     <button onclick="resetSearch()">Reset</button>
   </div>
   
+  
 
   <div id="recipeContainer"></div>
+  <img id="animatedImage" src="images/recipe.png" alt="Recipe Icon" style="position:absolute; top:70px; left:0px; width:70px; z-index:10;">
+  <script src="js/animate.js"></script>
   <script src="js/recipe.js"></script>
 </body>
 </html>
