--- a/CSC209/FinalProject/calendar.html
+++ b/CSC209/FinalProject/calendar.html
@@ -34,5 +34,18 @@
   <img id="animatedImage" src="images/recipe.png" alt="Recipe Icon" style="position:absolute; top:70px; left:0px; width:70px; z-index:10;">
   <script src="js/animate.js"></script>
   <script src="js/calendar.js"></script>
+  <script>
+    window.onload = () => {
+      initCalendar();
+      const modalContent = document.querySelector(".modal-content");
+      const excludeInput = document.createElement("input");
+      excludeInput.type = "text";
+      excludeInput.placeholder = "Exclude ingredients or allergens (comma-separated)";
+      excludeInput.className = "exclude-filter";
+      excludeInput.id = "excludeIngredients";
+      excludeInput.oninput = loadAndShowRecipesForModal;
+      modalContent.insertBefore(excludeInput, modalContent.children[1]); // insert above #recipeList
+    };
+  </script>
 </body>
 </html>
